[package]
name = "postgres-inet"
version = "0.15.0" # remember to update docroot
authors = ["Nuew <code@nuew.net>"]
license = "Apache-2.0"
description = "Cidr and Inet support for postgres (unofficial)"
repository = "https://github.com/nuew/postgres-inet"
documentation = "https://docs.rs/postgres-inet"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql"]

[badges]
travis-ci = { repository = "nuew/postgres-inet", branch = "master" }

[dependencies]
byteorder = "1"
clippy = { version = "0", optional = true }
ipnetwork = { version = "0.12", optional = true }
postgres = "0.15"
