[package]
name = "postgres-inet"
version = "0.15.3" # remember to update docroot
authors = ["Nuew <code@nuew.net>"]
license = "Apache-2.0"
description = "(Unofficial) Cidr and Inet support for rust-postgres"
repository = "https://github.com/nuew/postgres-inet"
documentation = "https://docs.rs/postgres-inet"
readme = "README.md"
keywords = ["database", "network", "postgres", "postgresql", "sql"]
categories = ["database", "network-programming"]

[badges]
travis-ci = { repository = "nuew/postgres-inet", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
ipnetwork = { version = ">=0.7, <0.15", optional = true }
postgres = "0.15"
