[package]
name = "postgres-inet"
version = "0.19.0"
authors = ["Nuew <code@nuew.net>"]
license = "Apache-2.0"
description = "CIDR/INET support for rust-postgres"
repository = "https://github.com/nuew/postgres-inet"
documentation = "https://docs.rs/postgres-inet"
readme = "README.md"
keywords = ["database", "network", "postgres", "postgresql", "sql"]
categories = ["database", "network-programming"]

[badges]
travis-ci = { repository = "nuew/postgres-inet", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
bytes = "1"
ipnetwork = { version = ">=0.7, <0.19", optional = true }
postgres-types = "0.2"

[dev-dependencies]
postgres = "0.19.2"
